{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 28,
  "lineage": "5e9c65ca-376c-1093-eff9-70affda8f78a",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mtc_pub_ip_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/test-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.92.170.181",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-ip-1",
            "resource_group_name": "mtc-resource",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/networkInterfaces/mtc-nic-1",
            "internal_domain_name_suffix": "sbgmu5cr32eephsvifviz4ihmf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/test-ip-1",
                "subnet_id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-0D-B0-9A",
            "name": "mtc-nic-1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resource",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc_pub_ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg-1",
            "location": "eastus",
            "name": "mtc-sg-1",
            "resource_group_name": "mtc-resource",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg-1/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-sg-1",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resource",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc_pub_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/publicIPAddresses/test-ip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.92.170.181",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "test-ip-1",
            "resource_group_name": "mtc-resource",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "name": "mtc-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mtc-resource",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "network_security_group_id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg-1",
            "subnet_id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-subnet",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7cca4c90-ef51-4708-9e55-416a8cf90765",
            "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "eastus",
            "name": "mtc-network",
            "resource_group_name": "mtc-resource",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
                "name": "mtc-subnet-1",
                "security_group": "/subscriptions/58eb5a79-eeef-48d2-b6b2-0601d21ad36c/resourceGroups/mtc-resource/providers/Microsoft.Network/networkSecurityGroups/mtc-sg-1"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}